--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-website",
-  "homepage": "https://maitland.codes",
+  "homepage": "https://pmait.land",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
