--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.2.0",
     "globals": "^15.14.0",
     "react-router-dom": "^7.1.1",
     "sass-embedded": "^1.83.0",
