--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "personal-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://pmait.land",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
